--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travel Agency Project</title>
 </head>
 <body>
-    
+    <h1>Multiverse Travel Center</h1>
+    <h3>MULTItude of Savings</h3>
+    <p>Our Travel Agents will get you where you want to go, when you want to go, for the price you want to pay!</p>
+    <h4>Come see!</h4>
+    <ol start=1>
+        <li>Paris</li>
+        <li>Italy</li>
+        <li>Kentucky</li>
+        <li>London</li>
+        <li>Canada</li>
+    </ol>
+    <h4>Fun things like!</h4>
+    <ol start=1>
+        <li>Cafes</li>
+        <li>Historical Sites</li>
+        <li>Amusement Parks</li>
+        <li>Museums</li>
+        <li>The Effiel Tower</li>
+    </ol>
 </body>
 </html>
